Working, without migren

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
                 {
                     <tr>
                         <td>
-                            @Html.DisplayNameFor(model => model.First().UserEmail)
+                            @Html.DisplayFor(modelItem => item.UserEmail)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.CarNumber)
