--- a/Views/Home/Fines.cshtml
+++ b/Views/Home/Fines.cshtml
@@ -4,9 +4,11 @@
     ViewBag.Title = "Home Page";
 }
 
+<link type="text/css" rel="stylesheet" href="@Url.Content("~/wwwroot/css/main.css")" />
+
 <div class="row">
     <div class="col-md-12">
-        <img src="~/content/pic.jpg" alt="Header Image" class="img-responsive" style="width: 100%; height: auto;">
+        <img src="~/pictures/kat.jpg" alt="Header Image" class="img-responsive" style="width: 10%; height: auto;">
     </div>
 </div>
 
