--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "View";
 }
 
-<h2>View</h2>
+<link type="text/css" rel="stylesheet" href="@Url.Content("~/wwwroot/css/main.css")" />
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
+
     @Html.AntiForgeryToken()
-    
     <div class="form-horizontal">
-        <h4>Fine</h4>
+        <h4>Информация о штрафе</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -64,12 +64,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Создать" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Назад к списку", "Index")
 </div>
