--- a/Views/Home/Delete.cshtml
+++ b/Views/Home/Delete.cshtml
@@ -4,7 +4,8 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<link type="text/css" rel="stylesheet" href="@Url.Content("~/wwwroot/css/main.css")" />
+
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -61,7 +62,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
