--- a/Views/Home/Fines.cshtml
+++ b/Views/Home/Fines.cshtml
@@ -72,18 +72,18 @@
                                     else
                                     {
                                         @* Payment button for users *@
-                                <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                                    <input type="hidden" name="cmd" value="_xclick">
-                                    <input type="hidden" name="business" value="oleksandr.bohatyrov@gmail.com"> <!-- Ваш Sandbox PayPal Email -->
-                                    <input type="hidden" name="item_name" value="Fine Payment - @item.CarNumber">
-                                    <input type="hidden" name="amount" value="@item.Sum.ToString("F2", System.Globalization.CultureInfo.InvariantCulture)"> <!-- Правильное форматирование суммы -->
+                                    <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                                        <input type="hidden" name="cmd" value="_xclick">
+                                        <input type="hidden" name="business" value="oleksandr.bohatyrov@gmail.com"> <!-- Ваш Sandbox PayPal Email -->
+                                        <input type="hidden" name="item_name" value="Fine Payment - @item.CarNumber">
+                                        <input type="hidden" name="amount" value="@item.Sum.ToString("F2", System.Globalization.CultureInfo.InvariantCulture)"> <!-- Правильное форматирование суммы -->
 
-                                    <input type="hidden" name="currency_code" value="EUR">
-                                    <input type="hidden" name="return" value="@Url.Action("PaymentSuccess", "Home", new { carNumber = item.CarNumber }, Request.Url.Scheme)">
-                                    <input type="hidden" name="cancel_return" value="@Url.Action("PaymentCancel", "Home", null, Request.Url.Scheme)">
-                                    <button type="submit" class="btn btn-primary btn-sm">Pay with PayPal</button>
-                                </form>
-
+                                        <input type="hidden" name="currency_code" value="EUR">
+                                        <!-- Используем id вместо carNumber -->
+                                        <input type="hidden" name="return" value="@Url.Action("PaymentSuccess", "Home", new { id = item.Id }, Request.Url.Scheme)">
+                                        <input type="hidden" name="cancel_return" value="@Url.Action("PaymentCancel", "Home", new { id = item.Id }, Request.Url.Scheme)">
+                                        <button type="submit" class="btn btn-primary btn-sm">Pay with PayPal</button>
+                                    </form>
                                     }
                                 </td>
                             </tr>
