--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,19 +23,33 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })
+                        @Html.ActionLink(Resources.Resource.Home, "Index", "Home", new { area = "" }, new { @class = "nav-link" })
                     </li>
                     <li class="nav-item">
-                        @Html.ActionLink("Find", "Fines", "Home", new { area = "" }, new { @class = "nav-link" })
+                        @Html.ActionLink(Resources.Resource.Fines, "Fines", "Home", new { area = "" }, new { @class = "nav-link" })
                     </li>
 
                     <!-- Дополнительные пункты меню для админа -->
                     @if (User.IsInRole("Admin"))
                     {
                         <li class="nav-item">
-                            @Html.ActionLink("Create Fine", "Create", "Home", new { area = "" }, new { @class = "nav-link" })
+                            @Html.ActionLink(Resources.Resource.CreateFine, "Create", "Home", new { area = "" }, new { @class = "nav-link" })
                         </li>
                     }
+                </ul>
+
+                <!-- Флажки для переключения языка -->
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="@Url.Action("ChangeLanguage", "Home", new { lang = "en" })" class="nav-link">
+                            <img src="~/pictures/uk-flag.jpg" alt="EN" style="width: 24px; height: 24px;" />
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="@Url.Action("ChangeLanguage", "Home", new { lang = "et" })" class="nav-link">
+                            <img src="~/pictures/flag-et.gif" alt="ET" style="width: 24px; height: 24px;" />
+                        </a>
+                    </li>
                 </ul>
 
                 <!-- Логин/выход -->
