Made some styles

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -30,12 +30,12 @@
             </form>
             <table class="table">
                 <tr>
-                    <th>@Html.DisplayNameFor(model => model.First().UserEmail)</th>
-                    <th>@Html.DisplayNameFor(model => model.First().CarNumber)</th>
-                    <th>@Html.DisplayNameFor(model => model.First().Name)</th>
-                    <th>@Html.DisplayNameFor(model => model.First().Date)</th>
-                    <th>@Html.DisplayNameFor(model => model.First().Velocity)</th>
-                    <th>@Html.DisplayNameFor(model => model.First().Sum)</th>
+                    <th>@Resources.Resource.UserEmail</th>
+                    <th>@Resources.Resource.CarNumber</th>
+                    <th>@Resources.Resource.Name</th>
+                    <th>@Resources.Resource.Date</th>
+                    <th>@Resources.Resource.Velocity</th>
+                    <th>@Resources.Resource.Sum</th>
                     <th>@Resources.Resource.Actions</th>
                 </tr>
 
