--- a/Content/bootstrap.css
+++ b/Content/bootstrap.css
@@ -1795,7 +1795,7 @@ progress {
 
 .table-striped > tbody > tr:nth-of-type(odd) > * {
   --bs-table-accent-bg: var(--bs-table-striped-bg);
-  color: var(--bs-table-striped-color);
+  color: white
 }
 
 .table-striped-columns > :not(caption) > tr > :nth-child(even) {
