--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -14,7 +14,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, 0.5); /* Полупрозрачный черный слой */
+        background: rgba(0, 0, 0, 0.5); 
         z-index: -1;
     }
 
@@ -26,15 +26,15 @@ h4 {
 }
 
 .container {
-    background: none; /* Убирает любые фоны у контейнера */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Только тень без фона */
+    background: none; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     min-height: 100vh;
     padding: 20px;
 }
 
 .container2 {
-    background-color: rgba(255, 255, 255, 0.5); /* Полупрозрачный белый цвет */
+    background-color: rgba(255, 255, 255, 0.5); 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 20px;
@@ -45,18 +45,16 @@ h4 {
     margin-bottom: 20px;
 }
 
-/* Стили для изображений */
 .img-responsive {
     margin-bottom: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-/* Стили для форм */
 
 -horizontal {
-    background: none; /* Убирает любые фоны у контейнера */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Только тень без фона */
+    background: none; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     border-radius: 10px;
     padding: 20px;
 }
@@ -151,44 +149,41 @@ table {
         color: #858181;
     }
 
-/* Стили для навигационного меню */
 nav.navbar {
-    background-color: #003366; /* Темно-синий фон, как на Госуслугах */
+    background-color: #003366;
     padding: 10px 20px;
     border-radius: 0;
 }
 
     nav.navbar a.nav-link {
-        color: #ffffff; /* Белый текст для ссылок */
+        color: #ffffff; 
         font-size: 16px;
         font-weight: 600;
         padding: 10px;
     }
 
         nav.navbar a.nav-link:hover {
-            color: #ffbf00; /* Желтый цвет при наведении */
+            color: #ffbf00; 
             text-decoration: none;
         }
 
 .navbar-toggler {
-    border-color: #ffffff; /* Белая иконка бургер-меню */
+    border-color: #ffffff; 
 }
 
 .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
 
-/* Убираем отступы сверху и снизу для более компактного меню */
 .navbar {
     margin-bottom: 0;
     border: none;
 }
 
 .navbar-collapse {
-    justify-content: flex-end; /* Меню выровнено вправо */
+    justify-content: flex-end; 
 }
 
-/* Дополнительные элементы */
 .text-danger {
     color: #ff4d4d;
 }
@@ -203,7 +198,6 @@ a {
         text-decoration: underline;
     }
 
-/* Адаптивность */
 @media (max-width: 768px) {
     .container {
         padding: 15px;
